        ADDED - New NODES offset type - angle+radius
        ADDED - New NODES offset type - compass-point+percentage
        ADDED - "KEYSTYLE inverted" - to get a thermometer-style vertical legend.
        ADDED - "COMMENTSTYLE center" to make comments run along the centre of a link arrow. (and 'edge' for the usual)
        ADDED - COMMENTFONTCOLOR accepts 'contrast' as an option, for when it's 
	CHANGE - Cacti plugin uses "processed" map title now (allows {} tokens in the title)
	CHANGE - A NODE with no POSITION is not drawn, instead of drawn at 0,0. Useful for templates.
	CHANGE - A LINK with no NODES is no longer an error. Also for templates.
	CHANGE - The link_bulge secret mode bulges each side of a link independently now
        CHANGE - whitespace is stripped from the beginning and end of each line before parsing
	FIXED - Renaming a node in the editor correctly handles other relatively-positioned nodes
	FIXED - Minor issue with CRLF in map title for Cacti Plugin
	FIXED - CLI tool set --define options incorrectly.
	FIXED - Oneway links don't draw the INCOMMENT anymore
	FIXED - DEFAULT SCALE covers 0-100 properly (Thanks Dan Fusselman)
	FIXED - Scaled ICON in DEFAULT didn't get overwritten properly in nodes (Thanks Fabrizio Carusi)
	FIXED - No more floating-point imagemap coords (Thanks Trond Aspelund)
	FIXED - SNMP datasource should work with Windows SNMP again
	FIXED - MRTG datasource tried to stat() URLs
		
0.95b	FIXED - SQL schema issue that upset some mysql versions
	FIXED - Removed sometime-problem debugging code in editor
	FIXED - incorrect jquery path in cacti-picker
	FIXED - INFOURL not used without overlib
	FIXED - 'none' colours on LINKs were broken by typo.
	FIXED - NOTES, INNOTES, OUTNOTES all just flat-out borken in 0.95 and 0.95a
	FIXED - Page title can be incorrect if filehash starts with a digit.
	FIXED - Cacti plugin behaves a little better with auth disabled.

0.95a	FIXED - problem with global map variables. Oops.